# task-manager

./: Cargo.toml  Dockerfile  README.md  build.sh  install.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: cli.rs  main.rs  task.rs
