[package]
name = "tasker"
version = "0.1.0"
edition = "2021"



[dependencies]
home = "0.5.3"
serde_json = "1.0"
structopt = "0.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"


[package.metadata.x]
linux = "cargo build --release --target=x86_64-unknown-linux-gnu"
windows = "cargo build --release --target=x86_64-pc-windows-gnu"
apple = "cargo build --release --target=x86_64-apple-ios"
